Redirect process output